@@ -5,6 +5,7 @@ class Net::SSLeay::X509 {
   allow Net::SSLeay::PEM;
   
   use Net::SSLeay::Error;
+  use Net::SSLeay::X509_NAME;
   
   use Fn;
   
@@ -19,6 +20,8 @@ class Net::SSLeay::X509 {
   }
   
   # Instance Methods
+  native method get_issuer_name : Net::SSLeay::X509_NAME ();
+  
   native method DESTROY : void ();
   
 }
