@@ -3,6 +3,18 @@
 
 class Net::SSLeay::X509_NAME {
   
+  use Fn;
+  
+  # Class Methods
+  private static method new_with_pointer : Net::SSLeay::X509_NAME ($pointer : Address, $options : object[] = undef) {
+    
+    my $self = new Net::SSLeay::X509_NAME;
+    
+    Fn->set_pointer($self, $pointer);
+    
+    return $self;
+  }
+  
   # Instance Methods
   native method oneline : string ();
   
