@@ -4,6 +4,7 @@
     * Add Net::SSLeay::X509_NAME#oneline method.
     * Add Net::SSLeay::X509_NAME#DESTROY method.
     * Add Net::SSLeay::X509_NAME#get_text_by_NID method.
+    * Add Net::SSLeay::X509#get_issuer_name method.
 0.010 2024-11-11
   [New Features]
     * Add Net::SSLeay::BIO#new_file method.
